--- a/turbo.json
+++ b/turbo.json
@@ -17,10 +17,10 @@
         "BASIC_AUTH_PASS",
         "IRON_SESSION_PASSWORD",
         "IRON_SESSION_COOKIE_NAME",
-        "_AWS_ACCESS_KEY_ID",
-        "_AWS_SECRET_ACCESS_KEY",
-        "_AWS_REGION",
-        "_AWS_DYNAMO_TABLE_NAME",
+        "AWS_ACCESS_KEY_ID",
+        "AWS_SECRET_ACCESS_KEY",
+        "AWS_REGION",
+        "AWS_DYNAMO_TABLE_NAME",
         "NODE_ENV",
         "NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA",
         "NEXT_PUBLIC_SUBGRAPH_ENDPOINT",
