--- a/turbo.json
+++ b/turbo.json
@@ -21,6 +21,10 @@
         "AWS_SECRET_ACCESS_KEY",
         "AWS_REGION",
         "AWS_DYNAMO_TABLE_NAME",
+        "_AWS_ACCESS_KEY_ID",
+        "_AWS_SECRET_ACCESS_KEY",
+        "_AWS_REGION",
+        "_AWS_DYNAMO_TABLE_NAME",
         "NODE_ENV",
         "NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA",
         "NEXT_PUBLIC_SUBGRAPH_ENDPOINT",
